<resources>
    <string name="app_name">remotekyc</string>
    <string name="fingerprint_instructions">Place your fingertip on the scanner to verify your identity</string>
    <string name="success_toast">Creating Account..</string>
    <string name="phone_success">Verification Complete</string>
    <string name="phone_fail">Verification Failed</string>
    <string name="phone_invalid">Invalid Phone Number</string>
    <string name="login_empty">Please enter your email and password.</string>
    <string name="login_emptyemail">Please enter your email.</string>
    <string name="login_emptypass">Please enter your password.</string>
    <string name="login_invalid">Invalid email or password.</string>
    <string name="reset_invalid">Invalid email</string>
    <string name="reset_success">An email has been sent to reset your password</string>
    <string name="crypto_success">Verified</string>
    <string name="crypto_failure">Verification failed</string>
    <string name="cryto_failure">Verification Failed: Contact Administrator Immediately</string>
</resources>
