<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter your email to reset password"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:textSize="20dp"
        android:id="@+id/keyin"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email:"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:id="@+id/email"
        android:layout_below="@id/keyin"/>

    <EditText
        android:id="@+id/editemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:layout_below="@id/keyin"
        android:layout_toRightOf="@id/email"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editemail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/yellow"
        android:onClick="reset"
        android:text="Reset Password" />

    <TextView
        android:layout_below="@id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="A special link will be sent to your email shortly."
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center" />
</RelativeLayout>